<resources>
				<string name="app_name">Localodge</string>
				<string name="title_activity_dashboard">Nearby</string>
				<string name="navigation_drawer_open">Open navigation drawer</string>
				<string name="navigation_drawer_close">Close navigation drawer</string>
				<string name="nav_header_title">Android Studio</string>
				<string name="nav_header_subtitle">android.studio@android.com</string>
				<string name="nav_header_desc">Navigation header</string>
				<string name="action_settings">Settings</string>

				<string name="menu_home">Home</string>
				<string name="menu_gallery">Gallery</string>
				<string name="menu_slideshow">Slideshow</string>
				<string name="menu_tools">Tools</string>
				<string name="menu_share">Share</string>
				<string name="menu_send">Send</string>

				<!-- TODO: Remove or change this placeholder text -->
				<string name="hello_blank_fragment">Hello blank fragment</string>
				<string name="email">Email</string>
				<string name="password">Password</string>
				<string name="username">Username</string>
				<string name="create_an_account">Create an account</string>
				<string name="localodge">Localodge</string>
				<string name="register">Register</string>
				<string name="localodge_subtitle">See what\'s trending in your area</string>
				<string name="sign_in">Sign In</string>
				<string name="invalid_email">Please enter a valid email</string>
				<string name="invalid_password">Your password is too short</string>
				<string name="email_confirmation_sent">We\'ve sent you a confirmation email. Please check your inbox.</string>
				<string name="invalid_credentials">The email and/or password you have provided does not match.</string>
				<string name="generic_error_message">Something went wrong. Please try again later.</string>
				<string name="user_disabled_error">This account has been disabled.</string>
				<string name="user_not_found_error">Email not registered. Please create a new account.</string>
				<string name="email_already_in_use_error">This email is already in use. Please use a different email.</string>
				<string name="email_required">Please enter your email</string>
				<string name="password_required">Please enter your password.</string>
				<string name="username_required">Please enter your username</string>
				<string name="username_too_short">Username must be greater than 3 characters.</string>
				<string name="email_not_verified">This email is not yet verified. Please check your inbox.</string>
				<string name="forgot_password">Forgot password</string>
				<string name="continue_text">Continue</string>
				<string name="password_reset_failed">Could not send password reset email. Please try again later.</string>
				<string name="password_reset_sent">Password reset email was sent to your email. Please check your inbox</string>
				<string name="create_a_post">Create a post</string>
				<string name="location_retrieval_failed">Failed to retrieve your location.</string>
				<string name="request_location">Location is required to use this app. Turn on location?</string>
				<string name="location_denied">Location is required to use this app.</string>
				<string name="post_description">Post description</string>
				<string name="post">Post</string>
				<string name="enter_description">Enter description:</string>
				<string name="error_retrieving_data">Could not retrieve data. Please try again later.</string>
				<string name="user_post_comments">%s Comments</string>
				<string name="sign_out">Sign Out</string>
				<string name="send_feedback">Send Feedback</string>
				<string name="sign_out_confirmation">Are you sure you want to sign out?</string>
				<string name="cancel">Cancel</string>
				<string name="edit_profile_pic">Edit profile picture</string>
				<string name="close_dialog">close dialog</string>
				<string name="feedback">Feedback</string>
				<string name="send_feedback_failed">Could not send feedback. Please try again later.</string>
				<string name="feedback_required">Please provide your feedback</string>
				<string name="feedback_send">Feedback sent.</string>
				<string name="sign_in_required">Sign In Required</string>
				<string name="feedback_needs_credentials">Please sign in or create an account to send us feedback.</string>
				<string name="create_post_needs_credentials">Please sign in or create an account to create a post.</string>
				<string name="sign_in_required_to_perform_actions">Please sign in or create an account to perform actions.</string>
				<string name="sign_in_required_to_like_posts">Please sign in or create an account to like a post.</string>
				<string name="settings">Settings</string>
				<string name="could_not_get_location">Something went wrong while retrieving your location.</string>
				<string name="title_activity_settings">Settings</string>

				<!-- Preference Titles -->
				<string name="messages_header">Messages</string>
				<string name="sync_header">Sync</string>

				<!-- Messages Preferences -->
				<string name="signature_title">Your signature</string>
				<string name="reply_title">Default reply action</string>

				<!-- Sync Preferences -->
				<string name="sync_title">Sync email periodically</string>
				<string name="attachment_title">Download incoming attachments</string>
				<string name="attachment_summary_on">Automatically download attachments for incoming emails
				</string>
				<string name="attachment_summary_off">Only download attachments when manually requested</string>
				<string name="continue_without_logging_in">Continue without logging in</string>
				<string name="go_to_login">Go to login</string>
				<string name="account_suspended">Account Suspended</string>
				<string name="account_suspended_message">Your account has been temporarily suspended due to numerous received reports.</string>
				<string name="account_banned">Account Banned</string>
				<string name="account_banned_message">Your account has been banned due to numerous received reports.</string>
				<string name="notifications_button">Notifications button</string>
				<string name="contact_us">Contact Us</string>
				<string name="tell_us_more_about_this_hint">Tell us more about this %s</string>
				<string name="report_holder">Report %s</string>
				<string name="user">User</string>
				<string name="report_sent">Report sent.</string>
				<string name="are_you_sure">Are you sure?</string>
				<string name="are_you_sure_you_want_to_block_this_user">Are you sure you want to block this user?</string>
				<string name="block_user">Block User</string>
				<string name="confirm_hide_post">Prevent this post from ever showing up?</string>
				<string name="yes">Yes</string>
				<string name="user_blocked">User blocked.</string>
				<string name="post_blocked">Post blocked.</string>
				<string name="post_comment">Post comment</string>
				<string name="more_options">More options</string>
				<string name="comment_required">Comment required</string>
				<string name="see_more">See more</string>
				<string name="see_less">See less</string>
				<string name="sign_in_required_to_comment">Sign in required to post a comment.</string>
				<string name="report">Report</string>
				<string name="go_back">Go back</string>
				<string name="pick_from_gallery">pick from gallery</string>
				<string name="take_photo">take photo</string>
				<string name="delete_image">delete image</string>
				<string name="discard_changes">Discard Changes?</string>
				<string name="are_you_sure_you_want_to_discard_changes">Are you sure you want to discard changes?</string>
				<string name="discard">Discard</string>
				<string name="location_needed_to_make_a_post">Your location is required to publish a post.</string>
				<string name="location_needed_to_make_a_post_with_question">Your location is required to publish a post. Turn on location?</string>
				<string name="promote_your_post">Promote Your Post</string>
				<string name="exit_info">exit info</string>
				<string name="rating_5_info">Featured posts are always shown at the top of a page. If there are multiple featured posts, they will be ordered by popularity.</string>
				<string name="rating_2_info">Urgent posts are posts that require immediate attention. Posts with the urgent icon will have an Urgent ribbon and will stand out from all others.</string>
				<string name="rating_1_info">Highlighted posts are shown with a highlighted background colour. This makes the post stand out against other posts in a certain location.</string>
				<string name="featured_posts">Featured Posts</string>
				<string name="featured_posts_30_days">Featured: 30 days</string>
				<string name="featured_posts_7_days">Featured: 7 days</string>
				<string name="featured_posts_3_days">Featured: 3 days</string>
				<string name="urgent_posts">Urgent</string>
				<string name="highlighted_posts">Highlighted</string>
				<string name="invalid_card_details">Invalid card details</string>
				<string name="payment_succeeded">Payment succeeded</string>
				<string name="payment_failed">Payment failed</string>
				<string name="order_details">Order Details</string>
				<string name="promotion_option">Post Promotion Option:</string>
				<string name="confirm">Confirm</string>
				<string name="total">Total:</string>
				<string name="dismiss">Dismiss</string>
				<string name="pending_post_message">Your post is being reviewed.  We will notify you when your post has been published. This may take a few minutes.</string>
				<string name="add_image_attachment">add image attachment</string>
				<string name="image_attachment">image attachment</string>
</resources>
