<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
								xmlns:tools="http://schemas.android.com/tools"
								tools:showIn="navigation_view"
								>

				<item android:title="Communicate">
								<menu>
												<item
																				android:id="@+id/nav_share"
																				android:icon="@drawable/ic_menu_share"
																				android:title="@string/menu_share"
																				/>

												<item
																				android:id="@+id/nav_send_feedback"
																				android:icon="@drawable/ic_menu_send"
																				android:title="@string/send_feedback"
																				/>

												<item
																				android:id="@+id/nav_sign_out"
																				android:icon="@drawable/ic_exit"
																				android:title="@string/sign_out"
																				/>
								</menu>
				</item>

</menu>
