<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								xmlns:app="http://schemas.android.com/apk/res-auto"
								android:background="@drawable/dialog_bg"
								>

				<ImageButton
												android:id="@+id/close_dialog"
												android:layout_width="50dp"
												android:layout_height="50dp"
												android:background="@drawable/circle_ripple"
												android:padding="8dp"
												android:scaleType="fitXY"
												android:src="@drawable/ic_close_dark"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toTopOf="parent"
												android:layout_marginEnd="8dp"
												android:layout_marginTop="8dp"
												android:contentDescription="@string/close_dialog"
												/>

				<TextView
												android:id="@+id/textView"
												android:layout_width="wrap_content"
												android:layout_height="wrap_content"
												android:layout_marginStart="24dp"
												android:text="@string/order_details"
												android:textSize="24sp"
												app:layout_constraintBottom_toBottomOf="@+id/close_dialog"
												app:layout_constraintEnd_toStartOf="@+id/close_dialog"
												app:layout_constraintHorizontal_bias="0"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintTop_toTopOf="@+id/close_dialog"
												android:textColor="@color/matteBlack"
												/>

				<View
												android:id="@+id/view"
												android:layout_width="0dp"
												android:layout_height="2dp"
												android:layout_marginStart="24dp"
												android:layout_marginTop="12dp"
												android:layout_marginEnd="24dp"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintTop_toBottomOf="@id/textView"
												android:background="@color/lightGray"
												/>

				<include layout="@layout/list_item_user_post"
												android:id="@+id/list_item_user_post_container"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												app:layout_constraintTop_toBottomOf="@id/view"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												android:layout_marginStart="18dp"
												android:layout_marginEnd="18dp"
												android:layout_marginTop="12dp"
												/>

				<TextView
												android:id="@+id/promotion_method_title"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toBottomOf="@id/list_item_user_post_container"
												android:layout_marginTop="18dp"
												android:layout_marginStart="18dp"
												android:layout_marginEnd="18dp"
												android:textAppearance="@style/TextAppearance.AppCompat.Medium"
												android:gravity="center"
												android:text="@string/promotion_option"
												/>

				<TextView
												android:id="@+id/promotion_method"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toBottomOf="@id/promotion_method_title"
												android:layout_marginStart="18dp"
												android:layout_marginEnd="18dp"
												android:textAppearance="@style/TextAppearance.AppCompat.Large"
												android:gravity="center"
												android:textColor="@color/matteBlack"
												/>

				<TextView
												android:id="@+id/total_price_title"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toBottomOf="@id/promotion_method"
												android:layout_marginTop="12dp"
												android:layout_marginStart="18dp"
												android:layout_marginEnd="18dp"
												android:textAppearance="@style/TextAppearance.AppCompat.Medium"
												android:gravity="center"
												android:text="@string/total"
												/>

				<TextView
												android:id="@+id/total_price"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toBottomOf="@id/total_price_title"
												android:layout_marginStart="18dp"
												android:layout_marginEnd="18dp"
												android:textAppearance="@style/TextAppearance.AppCompat.Large"
												android:gravity="center"
												android:textColor="@color/matteBlack"
												/>

				<Button
												android:id="@+id/proceed_order"
												android:layout_width="120dp"
												android:layout_height="wrap_content"
												android:background="@drawable/button_default_primary"
												android:textColor="@android:color/white"
												android:text="@string/continue_text"
												android:textAllCaps="false"
												android:drawableEnd="@drawable/ic_arrow_forward"
												android:paddingEnd="12dp"
												android:paddingStart="12dp"
												android:drawablePadding="4dp"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toBottomOf="@id/total_price"
												android:layout_marginTop="18dp"
												app:layout_constraintBottom_toBottomOf="parent"
												android:layout_marginBottom="12dp"
												android:layout_marginEnd="18dp"
												/>

				<Button
												android:id="@+id/cancel_order"
												android:layout_width="120dp"
												android:layout_height="wrap_content"
												android:background="@drawable/button_default_outline"
												android:text="@string/cancel"
												android:textAllCaps="false"
												app:layout_constraintBottom_toBottomOf="parent"
												android:layout_marginBottom="12dp"
												app:layout_constraintStart_toStartOf="parent"
												android:layout_marginStart="18dp"
												/>

</androidx.constraintlayout.widget.ConstraintLayout>