<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
								xmlns:app="http://schemas.android.com/apk/res-auto"
								xmlns:tools="http://schemas.android.com/tools"
								android:orientation="vertical"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:background="@drawable/dialog_bg"
								>

				<ImageButton
												android:id="@+id/close_dialog"
												android:layout_width="50dp"
												android:layout_height="50dp"
												android:background="@drawable/circle_ripple"
												android:padding="8dp"
												android:scaleType="fitXY"
												android:src="@drawable/ic_close_dark"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toTopOf="parent"
												android:layout_marginEnd="8dp"
												android:layout_marginTop="8dp"
												android:contentDescription="@string/close_dialog"
												/>

				<TextView
												android:id="@+id/textView"
												android:layout_width="wrap_content"
												android:layout_height="wrap_content"
												android:layout_marginStart="24dp"
												android:text="@string/sign_in_required"
												android:textSize="24sp"
												app:layout_constraintBottom_toBottomOf="@+id/close_dialog"
												app:layout_constraintEnd_toStartOf="@+id/close_dialog"
												app:layout_constraintHorizontal_bias="0"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintTop_toTopOf="@+id/close_dialog"
												android:textColor="@color/matteBlack"
												/>

				<View
												android:id="@+id/view"
												android:layout_width="0dp"
												android:layout_height="2dp"
												android:layout_marginStart="24dp"
												android:layout_marginTop="12dp"
												android:layout_marginEnd="24dp"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintTop_toBottomOf="@id/textView"
												android:background="@color/lightGray"
												/>

				<TextView
												android:id="@+id/sign_in_message"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												android:layout_marginStart="24dp"
												android:layout_marginTop="16dp"
												android:layout_marginEnd="24dp"
												android:textSize="18sp"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintTop_toBottomOf="@+id/view"
												/>

				<ImageView
												android:id="@+id/user_profile_pic_image_view"
												android:layout_width="80dp"
												android:layout_height="80dp"
												android:layout_marginEnd="8dp"
												app:layout_constraintEnd_toEndOf="parent"
												android:layout_marginStart="8dp"
												app:layout_constraintStart_toStartOf="parent"
												android:layout_marginTop="18dp"
												app:layout_constraintTop_toBottomOf="@id/sign_in_message"
												android:layout_marginBottom="8dp"
												android:src="@drawable/ic_person_outline_white"
												android:scaleType="fitCenter"
												android:padding="8dp"
												android:background="@drawable/circle_border_accent"
												tools:ignore="ContentDescription"
												/>

				<Button
												android:id="@+id/dialog_sign_in_button"
												android:layout_width="wrap_content"
												android:layout_height="wrap_content"
												android:background="@drawable/button_default_primary"
												android:textAllCaps="false"
												android:text="@string/sign_in"
												android:textColor="@android:color/white"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toBottomOf="@id/user_profile_pic_image_view"
												app:layout_constraintStart_toStartOf="parent"
												android:layout_marginTop="24dp"
												android:paddingStart="18dp"
												android:paddingEnd="18dp"
												app:layout_constraintBottom_toBottomOf="parent"
												android:layout_marginBottom="24dp"
												android:drawableEnd="@drawable/ef_ic_arrow_forward"
												android:drawablePadding="8dp"
												/>


</androidx.constraintlayout.widget.ConstraintLayout>