<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
																																																			xmlns:tools="http://schemas.android.com/tools"
																																																			xmlns:app="http://schemas.android.com/apk/res-auto"
																																																			android:layout_width="match_parent"
																																																			android:layout_height="match_parent"
																																																			android:background="@drawable/city"
																																																			tools:context=".ui.login.fragments.SignInFragment"
																																																			android:id="@+id/sign_in_root_layout"
								>

				<LinearLayout
												android:animateLayoutChanges="true"
												android:id="@+id/title_background"
												android:layout_width="wrap_content"
												android:layout_height="wrap_content"
												android:orientation="vertical"
												android:background="@drawable/tag_right_rounded"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintTop_toTopOf="parent"
												app:layout_constraintBottom_toTopOf="@id/guideline"
												app:layout_constraintHorizontal_bias="0"
												android:paddingBottom="18dp"
												android:layout_marginEnd="18dp"
												>

								<TextView
																android:layout_width="wrap_content"
																android:layout_height="wrap_content"
																android:text="Localodge"
																android:textColor="@color/colorPrimary"
																fontPath="fonts/Montserrat-SemiBold.ttf"
																android:textSize="50sp"
																android:layout_marginTop="8dp"
																android:layout_marginEnd="12dp"
																android:layout_marginStart="8dp"
																android:layout_marginBottom="8dp"
																android:id="@+id/localodge_title_text_view"
																/>

								<TextView
																android:id="@+id/subtitle_text_view"
																android:layout_width="wrap_content"
																android:layout_height="wrap_content"
																android:text="@string/localodge_subtitle"
																android:textSize="22sp"
																android:layout_marginEnd="18dp"
																app:layout_constraintStart_toStartOf="parent"
																android:layout_marginStart="8dp"
																android:textColor="@color/dustyCedar"
																/>


				</LinearLayout>

				<EditText
												android:hint="@string/email"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												android:background="@drawable/edittext_background"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												android:layout_marginTop="8dp"
												android:layout_marginStart="24dp"
												android:layout_marginEnd="24dp"
												app:layout_constraintTop_toTopOf="@+id/guideline"
												android:textColorHint="#B3FFFFFF"
												android:paddingStart="12dp"
												android:paddingEnd="12dp"
												android:id="@+id/email_edit_text"
												android:textColor="@android:color/white"
												android:inputType="textEmailAddress"
												android:paddingTop="14dp"
												android:paddingBottom="14dp"
												/>

				<EditText
												android:hint="@string/password"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												android:background="@drawable/edittext_background"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												android:layout_marginStart="24dp"
												android:layout_marginEnd="24dp"
												android:textColorHint="#B3FFFFFF"
												android:paddingStart="12dp"
												android:paddingEnd="12dp"
												android:textColor="@android:color/white"
												android:inputType="textPassword"
												android:paddingTop="14dp"
												android:paddingBottom="14dp"
												android:id="@+id/password_edit_text"
												android:layout_marginTop="12dp"
												app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
												android:elevation="1dp"
												android:outlineProvider="none"
												/>

				<EditText
												android:hint="@string/username"
												android:layout_width="0dp"
												android:layout_height="wrap_content"
												android:background="@drawable/edittext_background"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												android:layout_marginTop="12dp"
												android:layout_marginStart="24dp"
												android:layout_marginEnd="24dp"
												android:textColorHint="#B3FFFFFF"
												android:paddingStart="12dp"
												android:paddingEnd="12dp"
												app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
												android:textColor="@android:color/white"
												android:inputType="text"
												android:paddingTop="14dp"
												android:paddingBottom="14dp"
												android:id="@+id/username_edit_text"
												android:alpha="0"
												/>

				<androidx.constraintlayout.widget.Guideline
												android:layout_width="wrap_content"
												android:layout_height="wrap_content"
												android:id="@+id/guideline"
												app:layout_constraintGuide_percent="0.42"
												android:orientation="horizontal"
												/>

				<TextView
												android:text="@string/forgot_password"
												android:layout_width="wrap_content"
												android:layout_height="wrap_content"
												android:id="@+id/forgot_password"
												android:layout_marginEnd="8dp"
												android:layout_marginStart="8dp"
												android:layout_marginBottom="12dp"
												android:padding="12dp"
												fontPath="fonts/Montserrat-SemiBold.ttf"
												android:textColor="@android:color/white"
												android:textSize="16sp"
												android:clickable="true"
												android:focusable="true"
												android:background="?attr/selectableItemBackgroundBorderless"
												app:layout_constraintTop_toBottomOf="@id/password_edit_text"
												app:layout_constraintStart_toStartOf="parent"
												app:layout_constraintEnd_toEndOf="parent"
												android:layout_marginTop="4dp"
												android:alpha="0"
												/>

				<TextView
												android:text="@string/create_an_account"
												android:layout_width="wrap_content"
												android:layout_height="wrap_content"
												android:id="@+id/register_button"
												app:layout_constraintBottom_toBottomOf="parent"
												android:layout_marginEnd="8dp"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintStart_toStartOf="parent"
												android:layout_marginStart="8dp"
												android:layout_marginBottom="12dp"
												android:padding="12dp"
												fontPath="fonts/Montserrat-SemiBold.ttf"
												android:textColor="@android:color/white"
												android:textSize="16sp"
												android:clickable="true"
												android:focusable="true"
												android:background="?attr/selectableItemBackgroundBorderless"
												/>

				<ImageButton
												android:id="@+id/back_button"
												android:layout_width="50dp"
												android:layout_height="50dp"
												android:src="@drawable/ic_arrow_back"
												android:background="@drawable/circle_color_primary"
												android:scaleType="fitXY"
												android:padding="8dp"
												app:layout_constraintTop_toTopOf="parent"
												app:layout_constraintStart_toStartOf="parent"
												android:layout_marginTop="8dp"
												android:layout_marginStart="8dp"
												android:alpha="0"
												/>

				<androidx.cardview.widget.CardView
												android:layout_width="0dp"
												android:layout_height="0dp"
												app:layout_constraintTop_toTopOf="parent"
												app:layout_constraintBottom_toBottomOf="parent"
												app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
												app:layout_constraintEnd_toEndOf="parent"
												app:layout_constraintStart_toStartOf="parent"
												android:id="@+id/sign_in_button"
												app:cardCornerRadius="12dp"
												app:cardBackgroundColor="@color/colorPrimary"
												app:cardElevation="8dp"
												android:clickable="true"
												android:focusable="true"
												android:foreground="?attr/selectableItemBackgroundBorderless"
												>

								<TextView
																android:id="@+id/sign_in_text_view"
																android:layout_width="match_parent"
																android:layout_height="match_parent"
																android:gravity="center"
																android:textColor="@android:color/white"
																android:textSize="18sp"
																fontPath="fonts/Montserrat-SemiBold.ttf"
																/>

				</androidx.cardview.widget.CardView>

				<FrameLayout
												android:id="@+id/loading_overlay"
												android:layout_width="match_parent"
												android:layout_height="match_parent"
												android:elevation="22dp"
												android:background="#80ffffff"
												android:visibility="gone"
												>

								<com.github.ybq.android.spinkit.SpinKitView
																xmlns:app="http://schemas.android.com/apk/res-auto"
																android:id="@+id/spin_kit"
																style="@style/SpinKitView.Large.CubeGrid"
																android:layout_width="wrap_content"
																android:layout_height="wrap_content"
																android:layout_gravity="center"
																app:SpinKit_Color="@color/colorAccent"/>

				</FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>